# pangomm-c-subclass-example

./: main.cpp  meson.build  pango_font_map_osg.cpp  pango_font_map_osg.h  pango_font_osg.cpp  pango_font_osg.h  pango_renderer_osg.cpp  pango_renderer_osg.h
